# dbt-kube-demo

./: .gitignore  Dockerfile  README.md  pyproject.toml
data/: customers.ndjson  data_faker.py  data_import.sh  shops.ndjson  storage_load.py
kubernetes/helm/: README.md
kubernetes/helm/dbt-bigquery/: Chart.yaml  values.yaml
kubernetes/helm/dbt-bigquery/templates/: _helpers.tpl  configmap.yaml  cronjob.yaml  serviceaccount.yaml
src/kube_bq_jobs/: README.md  dbt_project.yml
src/kube_bq_jobs/macros/: load_data.sql
src/kube_bq_jobs/models/: customers.sql  purchases_by_age_range.sql  purchases_by_shops.sql  shops.sql
terraform/: _settings.tf  artifactregistry.tf  bigquery.tf  gke.tf  iam.tf  network.tf
terraform/bootstrap/: .terraform.lock.hcl  _settings.tf  main.tf  terraform.tfstate  terraform.tfstate.backup
